deploy: d2dbea884ce7674d490c29afed7b030c8d37bb83

--- a/search.html
+++ b/search.html
@@ -6,7 +6,7 @@
 
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" /><title>Search - My Jupyter Book</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" /><title>Search - Stata Crash Course</title>
   
   
   
@@ -59,6 +59,7 @@
   <script src="_static/searchtools.js"></script>
   <script src="_static/language_data.js"></script>
   <script src="searchindex.js"></script>
+    <link rel="canonical" href="/stata-crashcourse/search.html" />
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="#" />
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
@@ -150,7 +151,7 @@
   
   
   
-    <p class="title logo__title">My Jupyter Book</p>
+    <p class="title logo__title">Stata Crash Course</p>
   
 </a></div>
         <div class="sidebar-primary-item">
@@ -330,7 +331,7 @@ document.write(`
   <div class="footer-item">
     
 <p class="component-author">
-By The Jupyter Book community
+By Tom Günther
 </p>
 
   </div>
