--- a/README.html
+++ b/README.html
@@ -8,7 +8,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" /><meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Stata Crash Course &#8212; My Jupyter Book</title>
+    <title>Stata Crash Course &#8212; Stata Crash Course</title>
   
   
   
@@ -58,6 +58,7 @@
     <script>var togglebuttonSelector = '.toggle, .admonition.dropdown';</script>
     <script>const THEBE_JS_URL = "https://unpkg.com/thebe@0.8.2/lib/index.js"; const thebe_selector = ".thebe,.cell"; const thebe_selector_input = "pre"; const thebe_selector_output = ".output, .cell_output"</script>
     <script>DOCUMENTATION_OPTIONS.pagename = 'README';</script>
+    <link rel="canonical" href="/stata-crashcourse/README.html" />
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
     <link rel="next" title="Unit 1 – First steps in Stata" href="units/unit01_first_steps/README.html" />
@@ -150,7 +151,7 @@
   
   
   
-    <p class="title logo__title">My Jupyter Book</p>
+    <p class="title logo__title">Stata Crash Course</p>
   
 </a></div>
         <div class="sidebar-primary-item">
@@ -409,7 +410,7 @@ You may not copy, modify, redistribute, or reuse any part of it without written 
     {
         requestKernel: true,
         binderOptions: {
-            repo: "binder-examples/jupyter-stacks-datascience",
+            repo: "executablebooks/jupyter-book",
             ref: "master",
         },
         codeMirrorConfig: {
@@ -479,7 +480,7 @@ You may not copy, modify, redistribute, or reuse any part of it without written 
   <div class="footer-item">
     
 <p class="component-author">
-By The Jupyter Book community
+By Tom Günther
 </p>
 
   </div>
