deploy: c1abc3decd8f1413f145ca7b5c907ed8104300ee

--- a/units/unit02_commands/README.html
+++ b/units/unit02_commands/README.html
@@ -382,7 +382,7 @@ In B, we specify an option that is not allowed for summarize. <br>
 In D, we do not specify an if-condition and <em>make</em> does not specify observation numbers. <br></p>
 </details>
 <p><span style="display:block; margin-top:0.5em;"></span></p>
-<p><strong>Q2: According to the help file, which of the following is the minimal abbreviation for the command <code class="docutils literal notranslate"><span class="pre">summarize</span></code>?</strong> <br>
+<p><strong>Q2: According to the help file, which of the following is the minimal abbreviation for <code class="docutils literal notranslate"><span class="pre">summarize</span></code>?</strong> <br>
 A) s <br>
 B) su <br>
 C) sum <br>
