deploy: 5fb3ec301fa62a6347ee981d7b8f4a84b56e169f

--- a/units/unit01_first_steps/README.html
+++ b/units/unit01_first_steps/README.html
@@ -503,7 +503,9 @@ As Stata stores data in an ordered table, sorting becomes relevant here.</p>
 </pre></div>
 </div>
 <p><em>foreign</em> is a dummy variable.</p>
-</details></section>
+</details>
+<p><span style="display:block; margin-top:4em;"></span></p>
+</section>
 </section>
 
     <script type="text/x-thebe-config">
