--- a/units/unit02_commands/README.html
+++ b/units/unit02_commands/README.html
@@ -473,6 +473,7 @@ By passing selected variables to a command, the command will only execute for th
 </div>
 <p>Using the option <code class="docutils literal notranslate"><span class="pre">generate</span></code> creates five dummy variables <em>rep_dummy1</em>-<em>rep_dummy5</em>.</p>
 </details>
+<p><span style="display:block; margin-top:4em;"></span></p>
 </section>
 </section>
 
