--- a/units/unit03_setup_environment/README.html
+++ b/units/unit03_setup_environment/README.html
@@ -508,6 +508,7 @@ You can add characters to an existing global.</p>
 </div>
 <p>The command <code class="docutils literal notranslate"><span class="pre">macro</span> <span class="pre">list</span></code> shows the content of all globals and locals. If done correctly, you should find your stored paths here. Depending on your platform, you could also use backslashes <code class="docutils literal notranslate"><span class="pre">\</span></code> in your paths. Forward slashes <code class="docutils literal notranslate"><span class="pre">/</span></code> work cross-platform though.</p>
 </details>
+<p><span style="display:block; margin-top:4em;"></span></p>
 </section>
 </section>
 
